# HackthonBUNQ

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.html  ARCHITECTURE.md  CLAUDE.md  DEMO.md  Makefile  README.md  SANDBOX_USERS.md  SANDBOX_USERS.template.md  SESSION_2026-04-25.md  docker-compose.yml  start.sh  stop.sh
backend/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
backend/app/: __init__.py  auth.py  main.py
backend/app/agents/: __init__.py  anthropic_client.py  auditor.py  base.py  bidding.py  collector.py  constitution.py  emergency.py  matchmaker.py  mediator.py  payout_optimizer.py  router.py  tools.py  vetting.py
backend/app/bunq/: __init__.py  bootstrap.py  client.py  webhooks.py
backend/app/config/: settings.py
backend/app/db/: __init__.py  supabase.py
backend/app/ledger/: __init__.py  tb_client.py  tb_two_phase.py
backend/app/routes/: admin.py  auth_bunq.py  charter.py  chat.py  circle_lifecycle.py  contribute.py  cycles.py  disputes.py  emergency.py  groups.py  health.py  invites.py  matchmaker.py  me.py  members.py  payout.py  webhooks.py
backend/app/utils/: ids.py  invites.py  logging.py  safety.py  tls.py
backend/scripts/: bootstrap_demo_circles.py  bunq_bootstrap.py  demo.py  seed_demo.py
backend/tests/: test_smoke.py
deploy/: README.md  deploy.sh  tigerbeetle.fly.toml
mobile/: README.md  app.json  package-lock.json  package.json  pubspec.yaml  tailwind.config.js
mobile-expo-legacy/: app.json
saved_videos/: VIDEO_PLAN.md  kitty_linkedin_intro.html  pod_endslide.html  pod_support_agent.html  (+1 more)
(+85 files in other folders)
