[project]
name = "kitty-backend"
version = "0.1.0"
description = "Kitty — FastAPI orchestrator for the bunq Hackathon 7.0 ROSCA app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "anthropic>=0.40",
    "supabase>=2.10",
    # Pin to match the TB server image in docker-compose.yml (client and server
    # versions must be compatible; client evicts itself if it's too new).
    "tigerbeetle==0.16.30",
    "ortools>=9.11",
    "python-multipart>=0.0.17",
    "python-dateutil>=2.9",
    "pyjwt>=2.10",
    "structlog>=24.4",
    "cryptography>=43.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
